@@ -13,6 +13,8 @@
 			<Base>true</Base>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
+			<BCC_SmartPCHCache>false</BCC_SmartPCHCache>
+			<BCC_PCHUsage>None</BCC_PCHUsage>
 			<_TCHARMapping>wchar_t</_TCHARMapping>
 			<FinalOutputDir>..\Release</FinalOutputDir>
 			<BCC_waus>false</BCC_waus>
@@ -36,35 +38,35 @@
 			<TASM_Debugging>None</TASM_Debugging>
 		</PropertyGroup>
 		<ItemGroup>
-			<None Include="..\..\..\libcstring\libcstring_system_string.h">
-				<BuildOrder>0</BuildOrder>
-			</None>
-			<CppCompile Include="..\..\..\libcstring\libcstring_system_string.c">
-				<BuildOrder>1</BuildOrder>
-			</CppCompile>
-			<None Include="..\..\..\libcstring\libcstring_types.h">
-				<BuildOrder>2</BuildOrder>
-			</None>
-			<None Include="..\..\..\libcstring\libcstring_wide.h">
-				<BuildOrder>3</BuildOrder>
-			</None>
-			<CppCompile Include="..\..\..\libcstring\libcstring_wide.c">
-				<BuildOrder>4</BuildOrder>
-			</CppCompile>
-			<None Include="..\..\..\libcstring\libcstring_codepage.h">
-				<BuildOrder>5</BuildOrder>
-			</None>
 			<None Include="..\..\..\libcstring\libcstring.h">
 				<BuildOrder>6</BuildOrder>
+			</None>
+			<None Include="..\..\..\libcstring\libcstring_codepage.h">
+				<BuildOrder>5</BuildOrder>
 			</None>
 			<None Include="..\..\..\libcstring\libcstring_definitions.h">
 				<BuildOrder>7</BuildOrder>
 			</None>
+			<None Include="..\..\..\libcstring\libcstring_narrow_string.h">
+				<BuildOrder>9</BuildOrder>
+			</None>
 			<None Include="..\..\..\libcstring\libcstring_string.h">
 				<BuildOrder>8</BuildOrder>
 			</None>
-			<None Include="..\..\..\libcstring\libcstring_narrow.h">
-				<BuildOrder>9</BuildOrder>
+			<CppCompile Include="..\..\..\libcstring\libcstring_system_string.c">
+				<BuildOrder>1</BuildOrder>
+			</CppCompile>
+			<None Include="..\..\..\libcstring\libcstring_system_string.h">
+				<BuildOrder>0</BuildOrder>
+			</None>
+			<None Include="..\..\..\libcstring\libcstring_types.h">
+				<BuildOrder>2</BuildOrder>
+			</None>
+			<CppCompile Include="..\..\..\libcstring\libcstring_wide_string.c">
+				<BuildOrder>4</BuildOrder>
+			</CppCompile>
+			<None Include="..\..\..\libcstring\libcstring_wide_string.h">
+				<BuildOrder>3</BuildOrder>
 			</None>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
