@@ -77,6 +77,72 @@
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
+		<Configuration
+			Name="VSDebug|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="4"
+			CharacterSet="1"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="0"
+				AdditionalIncludeDirectories="..\..\include;..\..\common"
+				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE"
+				BasicRuntimeChecks="3"
+				SmallerTypeCheck="true"
+				RuntimeLibrary="3"
+				WarningLevel="4"
+				WarnAsError="false"
+				DebugInformationFormat="3"
+				CompileAs="1"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLibrarianTool"
+				OutputFile="$(OutDir)\libcstring.lib"
+				ModuleDefinitionFile=""
+				IgnoreAllDefaultLibraries="false"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
 	</Configurations>
 	<References>
 	</References>
@@ -91,7 +157,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\libcstring\libcstring_wide.c"
+				RelativePath="..\..\libcstring\libcstring_wide_string.c"
 				>
 			</File>
 		</Filter>
@@ -113,7 +179,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\libcstring\libcstring_narrow.h"
+				RelativePath="..\..\libcstring\libcstring_narrow_string.h"
 				>
 			</File>
 			<File
@@ -129,7 +195,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\libcstring\libcstring_wide.h"
+				RelativePath="..\..\libcstring\libcstring_wide_string.h"
 				>
 			</File>
 		</Filter>
